2009-07-02 Jaromir Talir (version 2.0.3)

    * Fixed czech translation for invoice template text
    
    * Added support for negative invoices to invoice template
    
    * Changed dependance on freefont to dejavu fonts

2008-05-25 Jaromir Talir (version 2.0.2)

    * bugfix doubled '-' sign in case of negative numbers in helios template  

2008-12-17 Jaromir Talir (version 2.0.1)

    * bugfix negative numbers in invoice template

2008-11-10 Jaromir Talir (version 2.0.0)

    * updating czech translation for warning letter (grammar corrections)
    
    * adding support for Keysets in public requests

2008-08-19 Ales Dolezal

	* new setup options, which provides way to manually set up some
	  parameters (trml name and path and font names and path) if used
	  with ``--no-check-deps'' option.

2008-07-15 Jaromir Talir (version 1.4.2)

    * update helios template 
	- enhanced VAT string prependation

    * added path to ubuntu font package path

    * updated installation process
	
2008-06-05 Jaromir Talir 

    * rpm build fixes
	
2008-06-05 Jaromir Talir, Ales Dolezal (version 1.4.1)

    * small build process changes

2008-05-30 Jaromir Talir, Ales Dolezal (version 1.4.0)

    * new build system fred-dist

    * impementation of new public request template
	
    * helios template update
	- changing date because of request from VGD

2008-03-06 Jaromir Talir (version 1.3.2)

    * examples are out of distribution package

    * helios template update
	- fixing another removing of 0 from old invoice numbering schema

2008-02-19 Jaromir Talir (version 1.3.1)

    * helios template update
	- fixing removing of 0 from old invoice numbering schema
	- fixing generation of element DatPorizeni
    * fred2pdf fixes made in r4415 was accidentaly revert, now are back

2008-01-09 Jaromir Talir (version 1.3.0)
	
    * helios integration
	
    * new invoice design

2007-11-15 Jaromir Talir (version 1.2)

    * speed fixes of pdf generation in rml2pdf
